Fixing font spacing

--- a/src/scss/global/_base.scss
+++ b/src/scss/global/_base.scss
@@ -73,7 +73,7 @@ a {
     .ticker-text {
         font-family: $font-serif;
         font-weight: 800;
-        letter-spacing: 12px;
+        letter-spacing: 10px;
         font-size: 58px;
         text-shadow: 3px 3px 2px rgba(66, 66, 66, 0.8);
         text-align: center;
@@ -88,12 +88,12 @@ a {
         animation: ticker 25s linear infinite;
         @include viewport(md) {
             font-size: 42px;
-            letter-spacing: 8px;
+            letter-spacing: 6px;
             animation: ticker 20s linear infinite;
         }
         @include viewport(sm) {
             font-size: 16px;
-            letter-spacing: 6px;
+            letter-spacing: 4px;
             text-shadow: 2px 2px 2px rgba(66, 66, 66, 0.8);
             animation: ticker 15s linear infinite;
         }
